fix scaling on mobile device

--- a/styles.css
+++ b/styles.css
@@ -16,8 +16,7 @@ body {
     align-items: flex-start;
     min-height: 100vh;
     margin: 20px 0 0 0;
-    overflow-x: hidden;
-    overflow-y: auto;
+    overflow: hidden;
     z-index: 0;
 }
 
@@ -69,7 +68,7 @@ body {
 }
 
 h1 {
-    font-size: 24px;
+    font-size: 1.5rem;
     color: #00ff00;
     margin-bottom: 10px;
 }
@@ -83,7 +82,7 @@ h1 {
 a {
     color: #00ff00;
     text-decoration: none;
-    font-size: 14px;
+    font-size: 1rem;
     position: relative;
     font-weight: bold;
 }
